<resources>
    <string name="app_name">KotlinWebViewEx</string>

    <string name="channel_name">noti_channel_name</string>
    <string name="channel_description">noti_channel_description</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="intro_candraw_title">다른 앱 위에 그리기 권한 허용 필요</string>
    <string name="intro_candraw_body">앱의 정상적인 사용을 위해\'다른 앱 위에 그리기\' 권한의 허용이 필요합니다. 권한설정 화면으로 이동하시겠습니까?</string>
    <string name="intro_candraw_cancel">구동에 필수로 필요한 \'다른 앱 위에 표시\' 권한이 허용되지 않아 앱을 사용할 수 없습니다. 앱을 종료 합니다.</string>
    <string name="intro_permission">구동에 필수로 필요한 권한이 허용되지 않아 앱을 종료 합니다.</string>


    <string name="permission_msg_location">위치 권한</string>
    <string name="permission_msg_phone">전화 권한</string>

    <string name="permission_msg_deny_title">구동 필수 권한 허용 필요</string>
    <string name="permission_msg_deny_msg">위 사용 권한이 없습니다. 설정화면에서 권한을 설정하시겠습니까?</string>
    <string name="permission_msg_deny_toast">구동에 필수로 필요한 권한이 허용되지 않아 앱을 사용할 수 없습니다. 앱을 종료 합니다.</string>


    <string name="dialog_title_text">커스텀 다이얼로그 연습중!</string>
    <string name="dialog_content_text">커스텀 다이얼로그 본문 내용!</string>
    <string name="dialog_input_type">입력값</string>
    <string name="dialog_input_text">값을 입력해주세요.</string>

    <string name="band_button">QR 등록하기</string>
    <string name="band_name">이름</string>
    <string name="band_scan_text">QR코드를 사각형 안에 비춰주세요.</string>
</resources>