<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abl_lang"
        style="@style/Toolbar_Title">

        <TextView
            style="@style/Toolbar_TextView"
            android:text="@string/dialog_title_text" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:text="@string/dialog_content_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"

                android:layout_weight="1.2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/dialog_input_type"
                    android:textColor="#000000" />


                <EditText
                    android:id="@+id/dialog_et"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:minHeight="40dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/dialog_value"
                    android:maxLength="6"
                    android:inputType="textPersonName|textCapCharacters"
                    android:gravity="center_vertical"
                    android:hint="@string/dialog_input_text"
                    android:paddingStart="10dp"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"/>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/dialog_btn_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue_left"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="center" />


        <LinearLayout
            android:id="@+id/dialog_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue_right"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
